# Krayavikrayam

./: .env.example  .gitignore  .npmrc  CONTRIBUTING.md  DEPLOY.md  README.md  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  railway.toml  requirements.txt  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.procurement.json  vercel.json  vitest.config.ts  vitest.setup.ts
00-rules/: CLAUDE.md
01-templates/: TBE-UV2.xlsx
05-evidence/: 4-in-1_evidence.md  BBA-simulator_evidence.md  DH20_evidence.md  TCHFDH10_evidence.md  TCHFDH20_evidence.md  UV-2_evidence.md  _SCHEMA.md
06-scripts/: README.md  build_pitch.py  build_template.py  fill_tbe.py  generate_ops_manual.py  pinecone_client.py  pyproject.toml
07-output/: TBE-UV2_filled_2026-05-16.json  TBE-UV2_filled_2026-05-16.xlsx  TBE-UV2_filled_2026-05-19.json  TBE-UV2_filled_2026-05-19.xlsx  conventional-vs-advanced_UV2_2026-05-19.md  management-pitch_UV2_2026-05-19.md
08-engineering/: MCP-CONFIG.md  TOOL-DECISION-MATRIX.md
agents/: orchestrator.ts
app/: globals.css  layout.tsx  page.tsx
apps/procurement-copilot/: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml
components/: providers.tsx
docs/: CLAUDE-SESSIONS-v3.md  CLAUDE-SESSIONS.md  DEPLOY.md  MIGRATION-FROM-ANTARYAMI.md  PRD-v2.md  PRD-v3.md  SESSION-INDEX.md  TBE-SCHEMA.md  rag-tbe-pipeline.md
lib/: api-auth.ts  auth.ts  csat.ts  lead-scoring-engine.ts  marketing-data.ts  prisma.ts  sla.ts  utils.ts
mocks/: handlers.test.ts  handlers.ts  init-browser.ts
prisma/: schema.prisma  seed.ts
public/: manifest.json  sw.js
(+313 files in other folders)
