[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antaryami-procurement-copilot"
version = "0.1.0"
description = "Agentic procurement copilot agents (LangGraph + FastAPI) for the Antaryami OS RFX workflow."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Antaryami OS" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "langgraph>=0.2.0",
  "langchain-core>=0.2.0",
  "python-dateutil>=2.9",
  "httpx>=0.27",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.1.0"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
  "httpx>=0.27",
]

[project.scripts]
procurement-copilot = "procurement_copilot.main:run"
procurement-eval = "procurement_copilot.eval.runner:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
